first header removed

--- a/Course.html
+++ b/Course.html
@@ -77,26 +77,6 @@
     <header id="header" class="header">
       <div class="header-top bg-theme-color-2 sm-text-center">
         <div class="container">
-          <div class="row">
-            <div class="col-md-11">
-              <div class="widget no-border m-0">
-                <ul class="list-inline">
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-phone text-white"></i>
-                    <a class="text-white" href="#">+91 9056666275</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-map-marker text-white"></i>
-                    <a class="text-white" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-envelope-o text-white"></i>
-                    <a class="text-white" href="#">educationprospire@gmail.com</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="header-nav">
@@ -120,13 +100,13 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                      <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="gstvat.html">GST VAT</a>
+                      <a href="404.html">GST VAT</a>
                     </li>
                     <li>
-                      <a href="acca.html">ACCA IFRS</a>
+                      <a href="404.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -147,7 +127,7 @@
                   <a href="contact.html">contact</a>
                 </li>
                 <li>
-                  <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
+                  <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
                       class="fa fa-arrow-circle-right"></i></a>
 
                 </li>
@@ -196,7 +176,7 @@
                   <div class="schedule-details clearfix p-15 pt-10">
                     <h5 class="font-16 title"><a href="#">CMA USA</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa-regular fa-file mr-5"></i> DEC 31/2016</li>
+                      <li><i class="fa-regular fa-file mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i>
                         CERTIFIED MANAGEMENT ACCOUNTANT (USA)</li>
                     </ul>
@@ -313,7 +293,7 @@
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2016</a></h5>
+                    <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
