--- a/blog.html
+++ b/blog.html
@@ -76,34 +76,26 @@
     <div class="header-top bg-theme-color-2 sm-text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-11">
             <div class="widget no-border m-0">
               <ul class="list-inline">
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-white"></i> <a class="text-white" href="#">123-456-789</a> </li>
-                <li class="text-white m-0 pl-10 pr-10"> <i class="fa fa-clock-o text-white"></i> Mon-Fri 8:00 to 2:00 </li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-white"></i> <a class="text-white" href="#">contact@yourdomain.com</a> </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="widget no-border m-0">
-              <ul class="list-inline text-right sm-text-center">
-                <li>
-                  <a href="#" class="text-white">FAQ</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-phone text-white"></i>
+                  <a class="text-white" href="#">+91 9056666275</a>
                 </li>
-                <li class="text-white">|</li>
-                <li>
-                  <a href="#" class="text-white">Help Desk</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-map-marker text-white"></i>
+                  <a class="text-white" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a>
                 </li>
-                <li class="text-white">|</li>
-                <li>
-                  <a href="#" class="text-white">Support</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-envelope-o text-white"></i>
+                  <a class="text-white" href="#">educationprospire@gmail.com</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
-      </div>
+    </div>
     </div>
     <div class="header-nav">
       <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
@@ -126,13 +118,13 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                      <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="gstvat.html">GST VAT</a>
+                      <a href="404.html">GST VAT</a>
                     </li>
                     <li>
-                      <a href="acca.html">ACCA IFRS</a>
+                      <a href="404.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -153,7 +145,7 @@
                     <a href="contact.html">contact</a>
                   </li>
                   <li>
-                    <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
+                    <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
 
                   </li>
                 </ul>
@@ -173,11 +165,10 @@
         <div class="section-content">
           <div class="row">
             <div class="col-md-12 text-center">
-              <h2 class="title text-white">Event Grid with Left Sidebar</h3>
+              <h2 class="title text-white">Bloge</h3>
               <ol class="breadcrumb text-center text-black mt-10">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pages</a></li>
-                <li class="active text-gray-silver">Page Title</li>
+                <li><a href="/">Home</a></li>
+                <li class="active text-gray-silver">Bloge</li>
               </ol>
             </div>
           </div>
@@ -200,9 +191,9 @@
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2016</a></h5>
+                    <h5 class="font-16 title"><a href="#"> Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
+                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -222,9 +213,9 @@
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2016</a></h5>
+                    <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
+                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -244,9 +235,9 @@
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2016</a></h5>
+                    <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
+                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -266,9 +257,9 @@
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2016</a></h5>
+                    <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
+                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -288,9 +279,9 @@
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2016</a></h5>
+                    <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
+                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -310,9 +301,9 @@
                     </div>
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2016</a></h5>
+                    <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
+                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
@@ -346,12 +337,12 @@
               <div class="widget">
                 <h5 class="widget-title line-bottom">Archives</h5>
                 <ul class="list list-divider list-border">
-                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Vehicle Accidents</a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Family Law</a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Personal Injury</a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Personal Injury</a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Case Investigation</a></li>
-                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Business Taxation</a></li>
+                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i>best institution </a></li>
+                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Excellence in Teaching and Research</a></li>
+                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Innovation in Education</a></li>
+                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Student Satisfaction Awards</a></li>
+                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Social Responsibility Awards</a></li>
+                  <li><a href="#"><i class="fa fa-check-square-o mr-10 text-black-light"></i> Entrepreneurship Education Awards</a></li>
                 </ul>
               </div>
               <div class="widget">
@@ -381,16 +372,16 @@
               <div class="widget">
                 <h5 class="widget-title line-bottom">Tags</h5>
                 <div class="tags">
-                  <a href="#">travel</a>
-                  <a href="#">blog</a>
-                  <a href="#">lifestyle</a>
-                  <a href="#">feature</a>
-                  <a href="#">mountain</a>
-                  <a href="#">design</a>
-                  <a href="#">restaurant</a>
-                  <a href="#">journey</a>
-                  <a href="#">classic</a>
-                  <a href="#">sunset</a>
+                  <a href="#">ExcelInstitutions</a>
+                  <a href="#">QuantumSchools</a>
+                  <a href="#">GlobalEdHubs</a>
+                  <a href="#">EliteAcademias</a>
+                  <a href="#">AcumenAcademies</a>
+                  <a href="#">AcumenAcademies</a>
+                  <a href="#">ApexLearning</a>
+                  <a href="#">VistaEducates</a>
+                  <a href="#">SummitEd</a>
+                  <a href="#">InsightColleges</a>
                 </div>
               </div>
             </div>
@@ -441,7 +432,7 @@
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">career</a></li>
+                <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -453,9 +444,9 @@
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
-                <li><a href="gstvat.html">GST VAT</a></li>
-                <li><a href="acca.html">ACCA IFRS</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
           </div>
