--- a/gallery.html
+++ b/gallery.html
@@ -122,13 +122,13 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                      <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="gstvat.html">GST VAT</a>
+                      <a href="404.html">GST VAT</a>
                     </li>
                     <li>
-                      <a href="acca.html">ACCA IFRS</a>
+                      <a href="404.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -137,7 +137,7 @@
                     <a href="about.html">About</a>
                   </li>
                   <li>
-                    <a href="career.html">career</a>
+                    <a href="404.html">career</a>
                   </li>
                   <li class="active">
                     <a href="gallery.html">Gallery</a>
@@ -149,7 +149,7 @@
                     <a href="contact.html">contact</a>
                   </li>
                   <li>
-                    <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
+                    <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
 
                   </li>
                 </ul>
@@ -377,7 +377,7 @@
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">career</a></li>
+                <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -389,9 +389,9 @@
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
-                <li><a href="gstvat.html">GST VAT</a></li>
-                <li><a href="acca.html">ACCA IFRS</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
           </div>
