--- a/index.html
+++ b/index.html
@@ -80,26 +80,6 @@
     <header id="header" class="header">
       <div class="header-top bg-theme-color-2 sm-text-center">
         <div class="container">
-          <div class="row">
-            <div class="col-md-11">
-              <div class="widget no-border m-0">
-                <ul class="list-inline">
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-phone text-white"></i>
-                    <a class="text-white" href="#">+91 9056666275</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-map-marker text-white"></i>
-                    <a class="text-white" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-envelope-o text-white"></i>
-                    <a class="text-white" href="#">educationprospire@gmail.com</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="header-nav">
@@ -123,13 +103,13 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                      <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="gstvat.html">GST VAT</a>
+                      <a href="404.html">GST VAT</a>
                     </li>
                     <li>
-                      <a href="acca.html">ACCA IFRS</a>
+                      <a href="404.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -137,7 +117,7 @@
                   <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="career.html">career</a>
+                  <a href="404.html">career</a>
                 </li>
                 <li>
                   <a href="gallery.html">Gallery</a>
@@ -149,7 +129,7 @@
                   <a href="contact.html">contact</a>
                 </li>
                 <li>
-                  <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
+                  <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
                       class="fa fa-arrow-circle-right"></i></a>
                 </li>
               </ul>
@@ -674,7 +654,7 @@
                       <img class="img-fullwidth" alt="" src="images/project/p3.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
-                          href="enrolledagent.html"><span>click
+                          href="404.html"><span>click
                             to explore</span>
                         </a>
                       </div>
@@ -685,7 +665,7 @@
                         Special Enrollment Examination (SEE)
                       </h5>
                       <h4 class="font-weight-700 text-uppercase mt-0">
-                        <a href="enrolledagent.html">
+                        <a href="404.html">
                           ENROLLED AGENT</a>
                       </h4>
                       <p>
@@ -712,7 +692,7 @@
                       <img class="img-fullwidth" alt="" src="images/project/p4.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
-                          href="gstvat.html"><span>click
+                          href="404.html"><span>click
                             to explore</span>
                         </a>
                       </div>
@@ -722,7 +702,7 @@
                         CERTIFIED GST VAT ACCOUNTANT
                       </h5>
                       <h4 class="font-weight-700 text-uppercase mt-0">
-                        <a href="gstvat.html">
+                        <a href="404.html">
                           GST VAT</a>
                       </h4>
                       <p>
@@ -749,7 +729,7 @@
                       <img class="img-fullwidth" alt="" src="images/project/p5.jpg" />
                       <div class="hover-link">
                         <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
-                          href="acca.html"><span>click
+                          href="404.html"><span>click
                             to explore</span>
                         </a>
                       </div>
@@ -759,7 +739,7 @@
                         CERTIFIED ACCA IFRS ACCOUNTANT
                       </h5>
                       <h4 class="font-weight-700 text-uppercase mt-0">
-                        <a href="acca.html">ACCA IFRS</a>
+                        <a href="404.html">ACCA IFRS</a>
                       </h4>
                       <p>
                         Prospire's ACCA IFRS program: Tailored for finance professionals. Ensures expertise in IFRS
@@ -1375,7 +1355,7 @@
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">career</a></li>
+                <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -1387,9 +1367,9 @@
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
-                <li><a href="gstvat.html">GST VAT</a></li>
-                <li><a href="acca.html">ACCA IFRS</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
           </div>
