--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@
                 <h1 class="text-theme-color-2 font-200 line-height-1em mb-0">404</h1>
                 <h2 class="text-white mt-0">Oops! Page Not Found</h2>
                 <p class="text-gray-lightgray">The page you were looking for could not be found.</p>
-                <a href="index-mp-layout1.html" class="btn btn-border btn-theme-colored btn-dark mt-30">Return Home</a>
+                <a href="index.html" class="btn btn-border btn-theme-colored btn-dark mt-30">Return Home</a>
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="text-black-777 m-0"><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></p>
+          <p class="text-black-777 m-0"><a target="_blank" href="https://wexorai.com/">WexorAI</a></p>
         </div>
       </div>
     </div>
