--- a/acca.html
+++ b/acca.html
@@ -71,34 +71,26 @@
     <div class="header-top bg-theme-color-2 sm-text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-11">
             <div class="widget no-border m-0">
               <ul class="list-inline">
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-white"></i> <a class="text-white" href="#">123-456-789</a> </li>
-                <li class="text-white m-0 pl-10 pr-10"> <i class="fa fa-clock-o text-white"></i> Mon-Fri 8:00 to 2:00 </li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-white"></i> <a class="text-white" href="#">contact@yourdomain.com</a> </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="widget no-border m-0">
-              <ul class="list-inline text-right sm-text-center">
-                <li>
-                  <a href="#" class="text-white">FAQ</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-phone text-white"></i>
+                  <a class="text-white" href="#">+91 9056666275</a>
                 </li>
-                <li class="text-white">|</li>
-                <li>
-                  <a href="#" class="text-white">Help Desk</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-map-marker text-white"></i>
+                  <a class="text-white" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a>
                 </li>
-                <li class="text-white">|</li>
-                <li>
-                  <a href="#" class="text-white">Support</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-envelope-o text-white"></i>
+                  <a class="text-white" href="#">educationprospire@gmail.com</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
-      </div>
+    </div>
     </div>
     <div class="header-nav">
       <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
@@ -121,13 +113,13 @@
                   <a href="cmaindia.html">CMA INDIA</a>
                 </li>
                 <li>
-                  <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                  <a href="404.html">EA (Enrolled Agent)</a>
                 </li>
                 <li>
-                  <a href="gstvat.html">GST VAT</a>
+                  <a href="404.html">GST VAT</a>
                 </li>
                 <li class="active">
-                  <a href="acca.html">ACCA IFRS</a>
+                  <a href="404.html">ACCA IFRS</a>
                 </li>
               </ul>
             </li>
@@ -136,7 +128,7 @@
                 <a href="about.html">About</a>
               </li>
               <li>
-                <a href="#">career</a>
+                <a href="404.html">career</a>
               </li>
               <li >
                 <a href="gallery.html">Gallery</a>
@@ -148,7 +140,7 @@
                 <a href="contact.html">contact</a>
               </li>
               <li>
-                <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
 
               </li>
             </ul>
@@ -168,11 +160,11 @@
         <div class="section-content">
           <div class="row">
             <div class="col-md-12">
-              <h2 class="title text-white text-center">Course Details</h2>
+              <h2 class="title text-white text-center">ACCA IFRS</h2>
               <ol class="breadcrumb text-left text-black mt-10">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pages</a></li>
-                <li class="active text-gray-silver">Page Title</li>
+                <li><a href="/">Home</a></li>
+                <li><a href="course.html">Course</a></li>
+                <li class="active text-gray-silver">ACCA IFRS</li>
               </ol>
             </div>
           </div>
@@ -187,7 +179,7 @@
           <div class="col-md-8 blog-pull-right">
             <div class="single-service">
               <img src="images/services/lg3.jpg" alt="">
-              <h3 class="text-theme-colored">Accounting Technologies</h3>
+              <h3 class="text-theme-colored">ACCA IFRS(Association of Chartered Certified Accountants)</h3>
               <h5><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo unde, <span class="text-theme-color-2">Accounting Technologies</span> corporis dolorum blanditiis ullam officia <span class="text-theme-color-2">car repairing </span>natus minima fugiat repellat! Corrupti voluptatibus aperiam voluptatem. Exercitationem, placeat, cupiditate.</em></h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore suscipit, inventore aliquid incidunt, quasi error! Natus esse rem eaque asperiores eligendi dicta quidem iure, excepturi doloremque eius neque autem sint error qui tenetur, modi provident aut, maiores laudantium reiciendis expedita. Eligendi</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore voluptatem officiis quod animi possimus a, iure nam sunt quas aperiam non recusandae reprehenderit, nesciunt cumque pariatur totam repellendus delectus? Maxime quasi earum nobis, dicta, aliquam facere reiciendis, delectus voluptas, ea assumenda blanditiis placeat dignissimos quas iusto repellat cumque.</p>
@@ -309,9 +301,9 @@
                     <ul class="list list-border">
                       <li class="active"><a href="cmausa.html">CMA USA</a></li>
                       <li><a href="cmaindia.html">CMA INDIA</a></li>
-                      <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
-                      <li><a href="gstvat.html">GST VAT</a></li>
-                      <li><a href="acca.html">ACCA</a></li>
+                      <li><a href="404.html">ENROLLED AGENT</a></li>
+                      <li><a href="404.html">GST VAT</a></li>
+                      <li><a href="404.html">ACCA</a></li>
                     </ul>
                   </div>
                 </div>
@@ -465,7 +457,7 @@
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">career</a></li>
+                <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -477,9 +469,9 @@
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
-                <li><a href="gstvat.html">GST VAT</a></li>
-                <li><a href="acca.html">ACCA IFRS</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
           </div>
