--- a/cmausa.html
+++ b/cmausa.html
@@ -72,26 +72,6 @@
     <header id="header" class="header">
       <div class="header-top bg-theme-color-2 sm-text-center">
         <div class="container">
-          <div class="row">
-            <div class="col-md-11">
-              <div class="widget no-border m-0">
-                <ul class="list-inline">
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-phone text-white"></i>
-                    <a class="text-white" href="#">+91 9056666275</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-map-marker text-white"></i>
-                    <a class="text-white" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a>
-                  </li>
-                  <li class="m-0 pl-10 pr-10">
-                    <i class="fa fa-envelope-o text-white"></i>
-                    <a class="text-white" href="#">educationprospire@gmail.com</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="header-nav">
@@ -115,13 +95,13 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                      <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="gstvat.html">GST VAT</a>
+                      <a href="404.html">GST VAT</a>
                     </li>
                     <li>
-                      <a href="acca.html">ACCA IFRS</a>
+                      <a href="404.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -130,7 +110,7 @@
                   <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="career.html">career</a>
+                  <a href="404.html">career</a>
                 </li>
                 <li>
                   <a href="gallery.html">Gallery</a>
@@ -142,7 +122,7 @@
                   <a href="contact.html">contact</a>
                 </li>
                 <li>
-                  <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
+                  <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
                       class="fa fa-arrow-circle-right"></i></a>
 
                 </li>
@@ -575,9 +555,9 @@
                     <ul class="list list-border">
                       <li class="active"><a href="cmausa.html">CMA USA</a></li>
                       <li><a href="cmaindia.html">CMA INDIA</a></li>
-                      <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
-                      <li><a href="gstvat.html">GST VAT</a></li>
-                      <li><a href="acca.html">ACCA</a></li>
+                      <li><a href="404.html">ENROLLED AGENT</a></li>
+                      <li><a href="404.html">GST VAT</a></li>
+                      <li><a href="404.html">ACCA</a></li>
                     </ul>
                   </div>
                 </div>
@@ -639,7 +619,7 @@
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">career</a></li>
+                <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -651,9 +631,9 @@
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
-                <li><a href="gstvat.html">GST VAT</a></li>
-                <li><a href="acca.html">ACCA IFRS</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
           </div>
