--- a/contact.html
+++ b/contact.html
@@ -122,13 +122,13 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li>
-                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                      <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="gstvat.html">GST VAT</a>
+                      <a href="404.html">GST VAT</a>
                     </li>
                     <li>
-                      <a href="acca.html">ACCA IFRS</a>
+                      <a href="404.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -149,7 +149,7 @@
                     <a href="contact.html">contact</a>
                   </li>
                   <li>
-                    <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
+                    <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
 
                   </li>
                 </ul>
@@ -228,7 +228,6 @@
           <div class="col-md-7">
             <h3 class="line-bottom mt-0 mb-30">Reach Out: Contact Us for Assistance</h3>
             
-            <!-- Contact Form -->
             <form id="contact_form" name="contact_form" class="" action="#" method="post">
               <div class="row">
                 <div class="col-sm-6">
@@ -278,7 +277,6 @@
                 <button type="submit" class="btn btn-dark btn-theme-colored btn-flat" data-loading-text="Please wait...">Send your message</button>
               </div>
             </form>
-            <!-- Contact Form Validation-->
             <script type="text/javascript">
               $("#contact_form").validate({
                 submitHandler: function(form) {
@@ -304,9 +302,8 @@
             </script>
 
           </div>
-          <div class="col-md-5">
+          <!-- <div class="col-md-5">
 
-            <!-- Google Map HTML Codes -->
             <div 
               id="map-canvas-multipointer"
               data-mapstyle="default"
@@ -314,11 +311,10 @@
               data-zoom="12"
               data-marker="images/map-marker.png">
             </div>
-            <!-- Google Map Javascript Codes -->
             <script src="http://maps.google.com/maps/api/js?key=AIzaSyAYWE4mHmR9GyPsHSOVZrSCOOljk8DU9B4"></script>
             <script src="js/google-map-init-multilocation.js"></script>
             
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -365,7 +361,7 @@
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">career</a></li>
+                <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -377,9 +373,9 @@
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
-                <li><a href="gstvat.html">GST VAT</a></li>
-                <li><a href="acca.html">ACCA IFRS</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
           </div>
