--- a/enrolledagent.html
+++ b/enrolledagent.html
@@ -126,13 +126,13 @@
                       <a href="cmaindia.html">CMA INDIA</a>
                     </li>
                     <li class="active">
-                      <a href="enrolledagent.html">EA (Enrolled Agent)</a>
+                      <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="gstvat.html">GST VAT</a>
+                      <a href="404.html">GST VAT</a>
                     </li>
                     <li>
-                      <a href="acca.html">ACCA IFRS</a>
+                      <a href="404.html">ACCA IFRS</a>
                     </li>
                   </ul>
                 </li>
@@ -153,7 +153,7 @@
                   <a href="contact.html">contact</a>
                 </li>
                 <li>
-                  <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
+                  <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
                       class="fa fa-arrow-circle-right"></i></a>
 
                 </li>
@@ -552,9 +552,9 @@
                     <ul class="list list-border">
                       <li class="active"><a href="cmausa.html">CMA USA</a></li>
                       <li><a href="cmaindia.html">CMA INDIA</a></li>
-                      <li><a href="enrolledagent.html">ENROLLED AGENT</a></li>
-                      <li><a href="gstvat.html">GST VAT</a></li>
-                      <li><a href="acca.html">ACCA</a></li>
+                      <li><a href="404.html">ENROLLED AGENT</a></li>
+                      <li><a href="404.html">GST VAT</a></li>
+                      <li><a href="404.html">ACCA</a></li>
                     </ul>
                   </div>
                 </div>
@@ -617,7 +617,7 @@
               <ul class="list-border">
                 <li><a href="/">Home</a></li>
                 <li><a href="about.html">About us</a></li>
-                <li><a href="career.html">career</a></li>
+                <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -629,9 +629,9 @@
               <ul class="list-border font-13">
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
-                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
-                <li><a href="gstvat.html">GST VAT</a></li>
-                <li><a href="acca.html">ACCA IFRS</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
           </div>
