REGISTER PAGE REMOVED

--- a/contact.html
+++ b/contact.html
@@ -79,26 +79,6 @@
   <header id="header" class="header">
     <div class="header-top bg-theme-color-2 sm-text-center">
       <div class="container">
-        <div class="row">
-          <div class="col-md-11">
-            <div class="widget no-border m-0">
-              <ul class="list-inline">
-                <li class="m-0 pl-10 pr-10">
-                  <i class="fa fa-phone text-white"></i>
-                  <a class="text-white" href="#">+91 9056666275</a>
-                </li>
-                <li class="m-0 pl-10 pr-10">
-                  <i class="fa fa-map-marker text-white"></i>
-                  <a class="text-white" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a>
-                </li>
-                <li class="m-0 pl-10 pr-10">
-                  <i class="fa fa-envelope-o text-white"></i>
-                  <a class="text-white" href="#">educationprospire@gmail.com</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
     </div>
     </div>
     <div class="header-nav">
@@ -137,7 +117,7 @@
                     <a href="about.html">About</a>
                   </li>
                   <li>
-                    <a href="#">career</a>
+                    <a href="404.html">career</a>
                   </li>
                   <li>
                     <a href="gallery.html">Gallery</a>
@@ -145,11 +125,9 @@
                   <li>
                     <a href="blog.html">blog</a>
                   </li>
-                  <li class="active">
-                    <a href="contact.html">contact</a>
-                  </li>
+
                   <li>
-                    <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i class="fa fa-arrow-circle-right"></i></a>
+                    <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i class="fa fa-arrow-circle-right"></i></a>
 
                   </li>
                 </ul>
