--- a/index.html
+++ b/index.html
@@ -125,11 +125,9 @@
                 <li>
                   <a href="blog.html">blog</a>
                 </li>
+
                 <li>
-                  <a href="contact.html">contact</a>
-                </li>
-                <li>
-                  <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
+                  <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
                 </li>
               </ul>
@@ -1227,7 +1225,8 @@
               <div class="p-40 pl-0">
                 <!-- Reservation Form Start-->
                 <form id="reservation_form" name="reservation_form" class="reservation-form" method="post" action="#">
-                  <h3 class="mt-0 line-bottom mb-40"><span class="text-theme-color-2">Register Now !</span>to Tap into Expert Guidance!
+                  <h3 class="mt-0 line-bottom mb-40"><span class="text-theme-color-2">Register Now !</span>to Tap into
+                    Expert Guidance!
                   </h3>
                   <div class="row">
                     <div class="col-sm-12">
@@ -1264,8 +1263,9 @@
                     </div>
                     <div class="col-sm-12">
                       <div class="form-group mb-30">
-                        <textarea id="form_message" name="form_message" class="form-control required"  placeholder="Enter Message" rows="5" aria-required="true"></textarea>
-                      </div>  
+                        <textarea id="form_message" name="form_message" class="form-control required"
+                          placeholder="Enter Message" rows="5" aria-required="true"></textarea>
+                      </div>
                     </div>
                     <div class="col-sm-12">
                       <div class="form-group mb-0 mt-0">
