--- a/Course.html
+++ b/Course.html
@@ -123,11 +123,9 @@
                 <li>
                   <a href="blog.html">blog</a>
                 </li>
+
                 <li>
-                  <a href="contact.html">contact</a>
-                </li>
-                <li>
-                  <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
+                  <a href="contact.html" class="btn btn-gray btn-transparent btn-theme-colored">Contact <i
                       class="fa fa-arrow-circle-right"></i></a>
 
                 </li>
